# inference-labs-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: quickstart.py
inference_labs/: __init__.py  client.py  langchain.py  llamaindex.py
